# autoresearch-churn-hari

./: .gitignore  CHECKPOINT.md  README.md  export.py  model.joblib  model_meta.json  predict.py  prepare.py  program.md  pyproject.toml  results.tsv  skill.md  train.py
